# Aegle

./: README.md  pyproject.toml  run_aegle.py
consultation_system/: __init__.py  aggregator.py  manager.py  orchestrator.py  specialist.py
playground/example_data/: index.json
playground/example_data/cases/: case0.json
prompts/: aggregator.prompt  orchestrator.prompt  sp.prompt  specialist.json  specialist_core.prompt
prompts/guidance/: diagnosis_and_plan_guidance.prompt  historytaking_guidance.prompt
shared/: data_models.py  prompt_base.py
standardized_patient/: sp.py
utils/: logging_utils.py  utils.py
